# cers

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/backend/: mod.rs
src/backend/components/: get_mem_from_query.rs  get_process_list.rs  mod.rs
src/backend/process/: mod.rs
src/ui/: input.rs  main.rs  mod.rs  rendering.rs  ui.rs
src/ui/components/: addr_bounds.rs  exit.rs  keybind_lowbar.rs  mem_view_window.rs  mod.rs  output_log.rs  process_select.rs  search_settings.rs  titlebar.rs
src/ui/utils/: mod.rs
vhs/: demo.tape  w.tape
