[package]
name = "cers"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossbeam-channel = "0.5.13"
crossterm = "0.28.1"
dotenv = "0.15.0"
fragile = "2.0.0"
futures = "0.3.30"
hex = "0.4.3"
ratatui = "0.28.1"
term_size = "0.3.2"
tokio = { version = "1.40.0", features = ["full", "rt"] }
winapi = { version = "0.3.9", features = ["psapi", "memoryapi"] }
